<resources>
    <string name="app_name">ProGamer</string>
    <string name="string_welcome">WELCOME</string>
    <string name="string_welcome_back">WELCOME BACK</string>
    <string name="string_try_again">Try Again</string>
    <string name="string_continue">Continue</string>
    <string name="string_start">Start</string>
    <string name="string_correct">Correct</string>
    <string name="string_incorrect">Incorrect</string>
    <string name="string_check">Check</string>
    <string name="string_retry">Retry</string>
    <string name="string_attempts_counter">Attempts: %1$d</string>
    <string name="puzzle_count">Puzzle %1$d/%2$d</string>
    <string name="string_timer">Time: %1$s</string>
    <string name="string_level_number">Level %1$s</string>
    <string name="string_level_id">Id: %1$d</string>
    <string name="string_puzzle_id">Id: %1$d</string>
    <string name="string_out_of">%1$d/%2$d</string>
    <string name="string_rank">#%1$d</string>
    <string name="decimal_value">%1$d</string>
    <string name="login_student_number_hint">Student Number</string>
    <string name="register_student_number_hint">Student Number*</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="register_password_hint">Password*</string>
    <string name="register_confirm_password_hint">Confirm Password*</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="register_required">* Required</string>
    <string name="nav_levels">Levels</string>
    <string name="nav_leaderboard">Leaderboard</string>
    <string name="nav_logout">Logout</string>
    <string name="level_puzzle_progress">0/0</string>
    <string name="level_name">Level name</string>
    <string name="level_number">Level number</string>
    <string name="puzzle_check_button">Check</string>
    <string name="nav_settings">Settings</string>
    <string name="level_title">Level Title</string>
    <string name="level_description">Level Description</string>
    <string name="score">Score</string>
    <string name="achievement_icon">Achievement Icon</string>
    <string name="achievement_description">Achievement Description</string>
    <string name="achievement_title">Achievement Title</string>
    <string name="loading">Loading..</string>
    <string name="no_puzzles_found">No puzzles found</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="please_complete_a_level_to_view_other_users">Please complete a level to view other users</string>
    <string name="try_again">Try Again</string>
    <string name="my_score">My Score</string>
    <string name="attempts">Attempts</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="average_user_score">Average User Score</string>
    <string name="failed_to_load_average_user_data_please_try_again">Failed to load average user data. Please try again.</string>
    <string name="puzzle_id">Puzzle Id</string>
    <string name="puzzle_instructions">Puzzle Instructions</string>
    <string name="puzzle_data">Puzzle data</string>

</resources>
