<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="88dp"


    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_container"
            android:layout_width="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="start|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puzzle_id"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puzzle_instructions"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puzzle_data"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="14sp" />

        </LinearLayout>


    <View
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.12"
        android:background="@color/black" />
</LinearLayout>