<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.AdminPuzzlesActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/app_actionbar"
        layout="@layout/app_actionbar" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/layout_bottom_shadow" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/linear_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ellipsize="none"
                android:gravity="center"
                android:scrollHorizontally="false"
                android:text="@string/please_check_your_internet_connection_and_try_again" />

            <Button
                android:id="@+id/button_try_again"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_corner_button_login"
                android:text="@string/try_again"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
