<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/levelRowLayout"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="0dp"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/levelRowLevelNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_number"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/levelRowLevelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_name"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/levelRowNumericProgressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/level_puzzle_progress" />

                <ProgressBar
                    android:layout_gravity="center_vertical"
                    android:id="@+id/levelRowProgressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="60"
                    android:progressDrawable="@drawable/custom_progress_bar" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/levelRowBadgeImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/trophy_bronze" />
            <TextView
                android:id="@+id/levelRowScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="000" />
        </LinearLayout>



    </LinearLayout>

    <View
        android:id="@+id/levelRowDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.12"
        android:background="@color/black" />
</LinearLayout>