<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.LevelActivity">

    <include
        android:id="@+id/app_actionbar"
        layout="@layout/app_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_actionbar"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/text_level_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/level_title"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_level_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/level_description" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/levelActivityScore"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/score"
                        android:textSize="20sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="30sp"
                        android:gravity="center"
                        android:text="231" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/trophy_bronze" />

                            <ProgressBar
                                android:id="@+id/progressBar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_centerInParent="true"
                                android:indeterminate="false"
                                android:max="100"
                                android:progress="80"
                                android:progressDrawable="@drawable/circular" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/levelContinueButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="6dp"
            android:background="@drawable/round_corner_button_login"
            android:text="@string/string_continue"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


</RelativeLayout>
