<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_navigation"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <include
            android:id="@+id/app_actionbar"
            layout="@layout/app_actionbar" />

        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_actionbar" />

        <LinearLayout
            android:id="@+id/linear_achievement_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="56dp"
            android:visibility="gone">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey_300"
                app:cardCornerRadius="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/image_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/achievement_icon"
                        android:src="@drawable/trophy_gold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxWidth="160dp"
                            android:text="@string/achievement_title"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/text_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="1dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:maxWidth="160dp"
                            android:scrollHorizontally="false"
                            android:text="@string/achievement_description"
                            android:textSize="11sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ProgressBar
                                android:id="@+id/progress_bar_achievement"
                                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                                android:layout_width="0dp"
                                android:layout_height="4dp"
                                android:layout_weight="1"
                                android:indeterminate="false"
                                android:max="100"
                                android:progress="60"
                                android:progressDrawable="@drawable/custom_progress_bar" />

                            <TextView
                                android:id="@+id/text_progress_numeric"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:text="@string/string_out_of"
                                android:textSize="10sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </RelativeLayout>

    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:name="fragments.NavigationDrawerFragment"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>