<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:orientation="vertical"
    tools:context="fragments.LoginFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/layout_bottom_shadow" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="0dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_student_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:paddingTop="16dp">

                    <EditText
                        android:id="@+id/edit_student_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/login_student_number_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:paddingBottom="16dp"
                        android:paddingTop="8dp"
                        android:textSize="16sp"
                        tools:ignore="TextFields" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:paddingTop="16dp">

                    <com.xwray.passwordview.PasswordView
                        android:id="@+id/password_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/login_password_hint"
                        android:imeOptions="actionDone"
                        android:paddingBottom="16dp"
                        android:paddingTop="8dp"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/round_corner_button_login"
                    android:minWidth="88dp"
                    android:text="@string/login_button"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </android.support.v4.widget.NestedScrollView>
</LinearLayout>


